typography and set up

--- a/index.html
+++ b/index.html
@@ -6,15 +6,28 @@
 </head>
 
 <body>
-    <header>
-        <h1>welcome</h1>
-    </header>
-    <nav>
 
+
+    <nav role="nav" role="navigation">
+        <ul>
+            <li><a href="#section-1">Welcome</a></li>
+            <li><a href="#section-2">Who we are</a></li>
+            <li><a href="#section-3">How we tell our story</a></li>
+            <li><a href="#section-4">Brand expression</a></li>
+            <li><a href="#section-5">How we look</a></li>
+            <li><a href="#section-6">Building out a communication</a></li>
+        </ul>
     </nav>
-    <section class="main">
 
+    <section class="main">
+            
+        <h1>H1 looks like this here</h1>
+        <h2>H2 looks like this</h2>
+        <h3>H3 looks like this</h3>
+        <h4>This is H4 for section titles</h4>
+        
+        <div class="item content-3"><p>They're not ones to leave a good idea alone. They have the ambition to turn ideas into actions, accomplish more, or change their lives (or the world). They wear many hats, play many roles. They're the doers—the people who start things, big and small. Move the world forward. And inspire others to do the same. </p></div>
     </section>
-</body>
+    <link rel="stylesheet" type="text/css" href="styles/main.min.css">
 
 </html>
