--- a/index.html
+++ b/index.html
@@ -30,37 +30,37 @@
             </button>
             <ul id="menu-list">
                 <li>
-                    <a href="#section-1">Welcome</a>
+                    <a class="purple" href="#section-1">Welcome</a>
                     <ul class="sub-nav__item">
                         <li class="sub-nav__item">
-                            <a href="#section-1-a">What's new</a>
+                            <a class="purple" href="#section-1-a">What's new</a>
                         </li>
                         <li class="sub-nav__item">
-                            <a href="#section-1-b">We are evolving</a>
+                            <a class="purple" href="#section-1-b">We are evolving</a>
                         </li>
                     </ul>
                 </li>
                 <li>
-                    <a href="#section-2">Who we are</a>
+                    <a class="blue" href="#section-2">Who we are</a>
                 </li>
                 <li>
-                    <a href="#section-3">How we tell our story</a>
+                    <a class="blue" href="#section-3">How we tell our story</a>
                     <ul class="sub-nav">
                         <li class="sub-nav__item">
-                            <a href="#section-2-a">Our voice</a>
+                            <a class="blue" href="#section-2-a">Our voice</a>
                         </li>
                         <li class="sub-nav__item">
-                            <a href="#section-2-b">
+                            <a class="blue" href="#section-2-b">
                                 Editorial system
                             </a>
                         </li>
                         <li class="sub-nav__item">
-                            <a href="#section-2-c">
+                            <a class="blue" href="#section-2-c">
                                 Editorial style
                             </a>
                         </li>
                         <li class="sub-nav__item">
-                            <a href="#section-2-d">Editorial approach</a>
+                            <a class="blue" href="#section-2-d">Editorial approach</a>
                         </li>
                     </ul>
                 </li>
@@ -83,11 +83,10 @@
             <!-- Modules should be stacked with a sibling relationship in order to programmatically adjust their position, margins, and padding. -->
             <section id="section-1">
                 <div class="intro wrapper">
-                    <h1>Microsoft Store</h1>
-                    <h1>marketing guidelines</h1>
+                    <h1>Microsoft Store marketing guidelines</h1>
                     <h6>An evolving document for agencies, internal partners, marketers in Microsoft, and other partner organizations</h6>
                     <picture>
-                        <img src="" alt="" srcset="">
+                        <img src="assets/multiple-devices.jpg" alt="" srcset="">
                     </picture>
                     <h6>Welcome to Microsoft Store</h6>
                     <p>For years, separate stores on Windows, Xbox, online, and in physical retail were confusing our visitors
@@ -175,7 +174,7 @@
             </section>
             <section id="section-2-a">
                 <div class="wrapper">
-                    <h4>Who we are</h4>
+                    <h3>Who we are</h3>
 
                     <span class="badge blue">We are evolving</span>
                     <h4>Our mission is to empower every person and every organizatoin on the planet to achieve more</h4>
