--- a/index.html
+++ b/index.html
@@ -65,7 +65,36 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="#section-4">Brand expression</a>
+                    <a href="#section-4" class="orange">Brand expression</a>
+                    <ul class="sub-nav">
+                        <li class="sub-nav__item">
+                            <a href="#section-4-a" class="orange">Summary</a>
+                        </li>
+                        <li class="sub-nav__item">
+                            <a href="#section-4-b" class="orange">Our Name</a>
+                        </li>
+                        <li class="sub-nav__item">
+                            <a href="#section-4-c" class="orange">Microsoft logo</a>
+                        </li>
+                        <li class="sub-nav__item">
+                            <a href="#section-4-d" class="orange">Microsoft logo use</a>
+                        </li>
+                        <li class="sub-nav__item">
+                            <a href="#section-4-e" class="orange">Microsoft symbol</a>
+                        </li>
+                        <li class="sub-nav__item">
+                            <a href="#section-4-f" class="orange">Microsoft Store icon</a>
+                        </li>
+                        <li class="sub-nav__item">
+                            <a href="#section-4-g" class="orange">Microsoft Store icon use</a>
+                        </li>
+                        <li class="sub-nav__item">
+                            <a href="#section-4-h" class="orange">Microsoft Store icon:<br>things to avoid</a>
+                        </li>
+                        <li class="sub-nav__item">
+                            <a href="#section-4-i" class="orange">Microsoft Store badge</a>
+                        </li>
+                    </ul>
                 </li>
                 <li>
                     <a href="#section-5">How we look</a>
@@ -202,7 +231,7 @@
                         more, or change their lives (or the world). They wear many hats, play many roles. They're the doers—the
                         people who start things, big and small. Move the world forward. And inspire others to do the same. </p>
                     <picture>
-                        <img src="assets/tanesha.jpg" alt="empowering people" srcset="">
+                        <img src="assets/takesha.jpg" alt="empowering people" srcset="">
                     </picture>
                     <div class="overlay rightv">
                         <p>For Kenesha Sneed, starting Tactile Matter, a business creating ceramics, was about finding the balance
