--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     <picture>
                         <img src="assets/multiple-devices.jpg" alt="" srcset="">
                     </picture>
-                    <h6>Welcome to Microsoft Store</h6>
+                    <h6 class="small">Welcome to Microsoft Store</h6>
                     <p>For years, separate stores on Windows, Xbox, online, and in physical retail were confusing our visitors
                         and fans. Now we've unified them under one brand and one name: Microsoft Store. We're on a path to
                         a better and simpler experience.</p>
@@ -130,35 +130,37 @@
             </section>
             <section id="section-1-a">
                 <div class="wrapper">
-                    <span class="badge purple">What's New</span>
+                    <div>
+                        <span class="badge purple">What's New</span>
+                    </div>
                     <h4>Top five things to know</h4>
                     <div class="half">
-                        <span class="numeral">1</span>
+                        <span class="numeral"><h6>1</h6></span>
                         <h6>Our name</h6>
                         <p>We're aligning our retail experience under One Microsoft. No more Windows Store, Xbox Store, and
                             permutations like Store, Games Store, and Music Store. Our name is Microsoft Store and our brand
                             is Microsoft. </p>
                     </div>
                     <div class="half">
-                        <span class="numeral">2</span>
+                        <span class="numeral"><h6>2</h6></span>
                         <h6>Our Microsoft Logo</h6>
                         <p>In your communications, lead with the Microsoft logo and Microsoft Store in type. Use the new Microsoft
                             Store shopping bag icon for wayfinding.</p>
                     </div>
                     <div class="half">
-                        <span class="numeral">3</span>
+                        <span class="numeral"><h6>3</h6></span>
                         <h6>Storytelling framework</h6>
                         <p>The Microsoft Store storytelling framework dives deep into what empowerment means, and how to deliver
                             it</p>
                     </div>
                     <div class="half">
-                        <span class="numeral">4</span>
+                        <span class="numeral"><h6>4</h6></span>
                         <h6>Editorial approach</h6>
                         <p>Like a magazine, Microsoft Store should be about curating content and providing warm and relaxed
                             experiences that have customers coming back for more.</p>
                     </div>
                     <div class="half">
-                        <span class="numeral">5</span>
+                        <span class="numeral"><h6>5</h6></span>
                         <h6>More to come</h6>
                         <p>We're just beginning the evolution of Microsoft Store. While these guidelines are high-level, look
                             for regular updates that cover various elements in greater depth.</p>
@@ -176,7 +178,7 @@
                     </p>
                     <div class="cross-through">
                         <span>Selling</span>
-                        <h6>Empoweringt</h6>
+                        <h6>Empowering</h6>
                         <p>We're not just here to sell stuff. We're here to help people figure out what, how, and when they
                             can achieve whatever they want. Sometimes it involves a purchase, sometimes it doesn't. Either
                             way we're here for the long term. That's why the relationships we build matter—and why they're
@@ -205,21 +207,23 @@
                 <div class="wrapper">
                     <h3>Who we are</h3>
 
-                    <span class="badge blue">We are evolving</span>
-                    <h4>Our mission is to empower every person and every organizatoin on the planet to achieve more</h4>
-                    <p>In 1975, Bill Gates and Paul Allen had a huge vision—a computer on every desk and in every home. At the
-                        heart of that vision was our mission of empowerment, the motivation to make technology accessible
-                        to everyone and help people from all walks of life create, prosper, and achieve.</p>
-                    <picture>
-                        <img src="assets/who-we-are.jpg" alt="empowering people" srcset="">
-                    </picture>
-                    <div class="overlay left">
-                        <p>What do you do when you want a job in one of the toughest fields to break into? </p>
-                        <p>Step one is to not give up. </p>
-                        <p>Step two is to take countless photographs, spend hours, days, weeks editing video, and promoting
-                            your YouTube and Instagram accounts without a pause. </p>
-                        <p>Saying no to anxiety and the doubts of others, Edsta found his voice and an audience.</p>
-                        <p>Surface Pro is helping him break through</p>
+                    <span class="badge blue">our mission</span>
+                    <h4>To empower every person and every organization on the planet to achieve more</h4>
+                    <p>In 1975, Bill Gates and Paul Allen had a huge vision—a computer on every desk and in every home. At the heart of that vision was our mission of empowerment, the motivation to make technology accessible to everyone and help people from all walks of life create, prosper, and achieve.</p>
+                    <div class="overlay">
+                        <div class="img-wrapper">
+                            <picture>
+                                <img src="assets/who-we-are.jpg" alt="empowering people" srcset="">
+                            </picture>
+                        </div>
+                        <div class="left">
+                            <p>What do you do when you want a job in one of the toughest fields to break into? </p>
+                            <p>Step one is to not give up. </p>
+                            <p>Step two is to take countless photographs, spend hours, days, weeks editing video, and promoting
+                                your YouTube and Instagram accounts without a pause. </p>
+                            <p>Saying no to anxiety and the doubts of others, Edsta found his voice and an audience.</p>
+                            <p>Surface Pro is helping him break through</p>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -230,10 +234,12 @@
                     <p>They're not ones to leave a good idea alone. They have the ambition to turn ideas into actions, accomplish
                         more, or change their lives (or the world). They wear many hats, play many roles. They're the doers—the
                         people who start things, big and small. Move the world forward. And inspire others to do the same. </p>
-                    <picture>
-                        <img src="assets/takesha.jpg" alt="empowering people" srcset="">
-                    </picture>
-                    <div class="overlay rightv">
+                    <div class="img-wrapper">
+                        <picture>
+                            <img src="assets/takesha.jpg" alt="empowering people" srcset="">
+                        </picture>
+                    </div>
+                    <div class="overlay right">
                         <p>For Kenesha Sneed, starting Tactile Matter, a business creating ceramics, was about finding the balance
                             between heart and head. </p>
                         <p>She needed to prove to herself that she could do it. That she could beat the odds, and do so in a way
