section 2 content finished

--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                     <div class="cta"><a href="#">See the messaging framework</a></div>
                 </div>
             </section>
-            <section id="section-2-e">
+            <section id="section-2-g">
                 <div class="wrapper">
                     <span class="badge blue">Empowering our audiences</span>
                     <h4>Empowering our customers to achieve more</h4>
@@ -421,6 +421,39 @@
                             
                         </div>  
                    
+                </div>
+            </section>
+            <section id="section-2-h">
+                <div class="wrapper">
+                    <span class="badge blue">Our channels</span>
+                    <h4>One Microsoft Store, many experiences</h4>
+                    <h5>Microsoft Store is the channel through which our customers experience, interact, and build relations with Microsoft. It's where we empower every person and organization on the planet to achieve more.</h5>
+                    <h5>Each channel within Microsoft Store has a specific role and a message to our customers. </h5>
+                    <div class="table-three">
+                        <div class="titles">Channel</div>
+                        <div class="titles">Role</div>
+                        <div class="titles">Message</div>
+                        <div class="tt-row">
+                            <div class="channel">Windows</div>
+                            <div class="role">The most efficient way to engage with customers on Windows, delivering experiences that are relevant to their current Windows 10 device. </div>
+                            <div class="message">Get the most out of Windows 10. Safer easier and faster.</div>
+                        </div>
+                        <div class="tt-row">
+                            <div class="channel">Creators</div>
+                            <div class="role">The most efficient way to eng\age with customers on Xbox, delivering experiences that are relevant to their Xbox. </div>
+                            <div class="message">The easiest and fastest way to get games and entertainment for your Xbox. </div>
+                        </div>
+                        <div class="tt-row">
+                            <div class="channel">Learners</div>
+                            <div class="role">The space to engage with the broadest set of customers, introducing them to Microsoft, showing the breadth of our offering, as well as creating highly targeted engaging experiences. </div>
+                            <div class="message">Experience all that’s possible with Microsoft.</div>
+                        </div>
+                        <div class="tt-row">
+                                <div class="channel">Business</div>
+                                <div class="role">The best way to establish a personal relation with customers, delivering experiences that require physical presence. </div>
+                                <div class="message">Experience all that’s possible with Microsoft.</div>
+                            </div>
+                    </div>
                 </div>
             </section>
         </main>
