fixing nav links section 3

--- a/index.html
+++ b/index.html
@@ -50,26 +50,27 @@
                         <li class="sub-nav__item"><a href="#section-2-e" class="blue">Our message</a></li>
                         <li class="sub-nav__item"><a href="#section-2-f" class="blue">Our method</a></li>
                         <li class="sub-nav__item"><a href="#section-2-g" class="blue">Empowering our audience</a></li>
+                        <li class="sub-nav__item"><a href="#section-2-g" class="blue">Our channels</a></li>
                     </ul>
                 </li>
                 <li>
                     <a class="yellow" href="#section-3">How we tell our story</a>
                     <ul class="sub-nav">
                         <li class="sub-nav__item">
-                            <a class="yellow" href="#section-2-a">Our voice</a>
+                            <a class="yellow" href="#section-3-a">Our voice</a>
                         </li>
                         <li class="sub-nav__item">
-                            <a class="yellow" href="#section-2-b">
+                            <a class="yellow" href="#section-3-b">
                                 Editorial system
                             </a>
                         </li>
                         <li class="sub-nav__item">
-                            <a class="yellow" href="#section-2-c">
+                            <a class="yellow" href="#section-3-c">
                                 Editorial style
                             </a>
                         </li>
                         <li class="sub-nav__item">
-                            <a class="yellow" href="#section-2-d">Editorial approach</a>
+                            <a class="yellow" href="#section-3-d">Editorial approach</a>
                         </li>
                     </ul>
                 </li>
