--- a/index.html
+++ b/index.html
@@ -463,7 +463,9 @@
                 </div>
             </section>
             <section id="section-3">
+                <div class="wrapper">
                     <h3>How we tell our story</h3>
+                </div>
             </section>
             <section id="section-3-1">
                 <div class="wrapper">
