--- a/index.html
+++ b/index.html
@@ -246,19 +246,15 @@
                 <div class="wrapper">
                     <span class="badge blue">Our tribe</span>
                     <h4>We strive to reach people who share a mindset&#8211;people of action</h4>
-                    <p>They're not ones to leave a good idea alone. They have the ambition to turn ideas into actions, accomplish
-                        more, or change their lives (or the world). They wear many hats, play many roles. They're the doers—the
-                        people who start things, big and small. Move the world forward. And inspire others to do the same. </p>
+                    <p>They're not ones to leave a good idea alone. They have the ambition to turn ideas into actions, accomplish more, or change their lives (or the world). They wear many hats, play many roles. They're the doers—the people who start things, big and small. Move the world forward. And inspire others to do the same. </p>
                     <div class="img-wrapper">
                         <picture>
                             <img src="assets/takesha.jpg" alt="empowering people" srcset="">
                         </picture>
                     </div>
                     <div class="overlay right">
-                        <p>For Kenesha Sneed, starting Tactile Matter, a business creating ceramics, was about finding the balance
-                            between heart and head. </p>
-                        <p>She needed to prove to herself that she could do it. That she could beat the odds, and do so in a way
-                            that maintained her integrity as an artist. A balance and a struggle we are all familiar with.</p>
+                        <p>For Kenesha Sneed, starting Tactile Matter, a business creating ceramics, was about finding the balance between heart and head. </p>
+                        <p>She needed to prove to herself that she could do it. That she could beat the odds, and do so in a way that maintained her integrity as an artist. A balance and a struggle we are all familiar with.</p>
                     </div>
                 </div>
             </section>
@@ -595,6 +591,75 @@
                     <div class="cta"><a href="#" class="cta glyph">Questions? Contact us</a></div>
                 </div>
             </section>
+            <section id="section-4">
+                <div class="wrapper">
+                    <h2>Brand Expression</h2>
+                </div>
+			</section>
+			<section id="section-4-1">
+				<div class="wrapper">
+					<div class="badge orange">Summary</div>
+					<h4>How it all works together</h4>
+					<h5>Microsoft Store is the channel through which our customers experience, interact, and build relations with Microsoft. It's where we empower every person and organization on the planet to achieve more. </h5>
+				</div>
+			</section>
+			<section id="section-4-2">
+				<div class="wrapper">
+					<div class="badge orange">Our name</div>
+					<h4>Our most important term is our name.
+							Use it correctly.</h4>
+					<h5>Here are a couple of things to know about it:
+						</h5>
+				</div>
+			</section>
+			<section id="section-4-3">
+				<div class="wrapper">
+					<div class="badge orange">Microsoft logo</div>
+					<h4>Our logo</h4>
+					<h5>The Microsoft logo is the only logo used in our communications. Microsoft Store logo lock-ups appear only in global advertising. Don't create logo lock-ups. Don't use the symbol on its own. </h5>
+				</div>
+			</section>
+			<section id="section-4-4">
+				<div class="wrapper">
+					<div class="badge orange">Microsoft logo use</div>
+					<h4>That's how we use the logo</h4>
+					<h5>Use the full colo Microsoft logo on every communication, except for social.</h5>
+				</div>
+			</section>
+			<section id="section-4-5">
+				<div class="wrapper">
+					<div class="badge orange">Microsof symbol</div>
+					<h4>We use the Microsoft symbol very restrictively</h4>
+					<h5>Here are a few approved examples. If you are looking to use the sybol on its own, reach out to us.</h5>
+				</div>
+			</section>
+			<section id="section-4-6">
+				<div class="wrapper">
+					<div class="badge orange">Micorosoft store icon</div>
+					<h4>A Microsoft Store icon can be used only for wayfinding purposes, and for graphic continuity </h4>
+					<h5>With the introduction of the Microsoft logo, we are eliminating the use of Microsoft Store icon in marketing with two exceptions: </h5>
+				</div>
+			</section>
+			<section id="section-4-7">
+				<div class="wrapper">
+					<div class="badge orange">Microsoft STORE ICON USE</div>
+					<h4>How to use Microsoft Store icon </h4>
+					<h5>The icon can no longer be used decoratively or in a lock-up with the text. Give the icon a minimum clear space equal to the Microsoft symbol. Always use the icon in the tile, never cut it out. Always use the full color icon. 	</h5>
+				</div>
+			</section>
+			<section id="section-4-8">
+				<div class="wrapper">
+					<div class="badge orange">Microsoft STORE ICON: things to avoid</div>
+					
+				</div>
+			</section>
+			<section id="section-4-9">
+				<div class="wrapper">
+					<div class="badge orange">Microsoft STORE BADGE</div>
+					<h4>Use Microsoft Store badges for promoting digital content and for third parties </h4>
+					<h5>Microsoft Store badges should be used by third parties when promoting products from Microsoft Store, and when Apple and Google badges are present. It's always treated as button. Ads that come directly from Microsoft don't always need to use the badge, instead leading with the logo. </h5>
+				</div>
+			</section>
         </main>
 
 
