images for section 4

--- a/index.html
+++ b/index.html
@@ -600,7 +600,11 @@
 				<div class="wrapper">
 					<div class="badge orange">Summary</div>
 					<h4>How it all works together</h4>
-					<h5>Microsoft Store is the channel through which our customers experience, interact, and build relations with Microsoft. It's where we empower every person and organization on the planet to achieve more. </h5>
+                    <h5>Microsoft Store is the channel through which our customers experience, interact, and build relations with Microsoft. It's where we empower every person and organization on the planet to achieve more. </h5>
+                    <div>
+                        <p class="title">Master Brand</p>
+                    </div>
+                    div
 				</div>
 			</section>
 			<section id="section-4-2">
