--- a/index.html
+++ b/index.html
@@ -629,7 +629,7 @@
 			</section>
 			<section id="section-4-1">
 				<div class="wrapper">
-					<div class="badge orange">Summary</div>
+					<span class="badge orange">Summary</span>
 					<div>
                         <h4>How it all works together</h4>
                     </div>
@@ -665,7 +665,7 @@
 			<section id="section-4-2">
 				<div class="wrapper">
 
-					<div class="badge orange">Our name</div>
+					<span class="badge orange">Our name</span>
                     
                     <div>
                         <h4>Our most important term is our name.<br>Use it correctly.</h4>
@@ -690,7 +690,7 @@
 			</section>
 			<section id="section-4-3">
 				<div class="wrapper">
-					<div class="badge orange">Microsoft logo</div>
+					<span class="badge orange">Microsoft logo</span>
 					<div>
                         <h4>Our logo</h4>
                     </div>
@@ -701,7 +701,7 @@
 			</section>
 			<section id="section-4-4">
 				<div class="wrapper">
-					<div class="badge orange">Microsoft logo use</div>
+					<span class="badge orange">Microsoft logo use</span>
 					<div>
                         <h4>That's how we use the logo</h4>
                     </div>
@@ -710,7 +710,7 @@
 			</section>
 			<section id="section-4-5">
 				<div class="wrapper">
-					<div class="badge orange">Microsof symbol</div>
+					<span class="badge orange">Microsof symbol</span>
 					<div>
                         <h4>We use the Microsoft symbol very restrictively</h4>
                     </div>
@@ -719,7 +719,7 @@
 			</section>
 			<section id="section-4-6">
 				<div class="wrapper">
-					<div class="badge orange">Micorosoft store icon</div>
+					<span class="badge orange">Micorosoft store icon</span>
 					<div>
                         <h4>A Microsoft Store icon can be used only for wayfinding purposes, and for graphic continuity</h4>
                     </div>
@@ -728,7 +728,7 @@
 			</section>
 			<section id="section-4-7">
 				<div class="wrapper">
-					<div class="badge orange">Microsoft STORE ICON USE</div>
+					<span class="badge orange">Microsoft STORE ICON USE</span>
 					<div>
                         <h4>How to use Microsoft Store icon</h4>
                     </div>
@@ -737,13 +737,13 @@
 			</section>
 			<section id="section-4-8">
 				<div class="wrapper">
-					<div class="badge orange">Microsoft STORE ICON: things to avoid</div>
+					<span class="badge orange">Microsoft STORE ICON: things to avoid</span>
 					
 				</div>
 			</section>
 			<section id="section-4-9">
 				<div class="wrapper">
-					<div class="badge orange">Microsoft STORE BADGE</div>
+					<span class="badge orange">Microsoft STORE BADGE</span>
 					<div>
                         <h4>Use Microsoft Store badges for promoting digital content and for third parties </h4>
                     </div>
